--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,24 @@
+# build output
+dist/
+
+# generated types
+.astro/
+
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# local env files
+# environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.production
 
-# vercel
-.vercel
+# macOS-specific files
+.DS_Store
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# jetbrains setting folder
+.idea/
