--- a/package.json
+++ b/package.json
@@ -11,11 +11,25 @@
   "dependencies": {
     "@astrojs/node": "^9.5.1",
     "@astrojs/vercel": "^9.0.2",
+    "@astrojs/vue": "^5.1.4",
     "@neondatabase/serverless": "^1.0.2",
     "@tailwindcss/vite": "^4.1.18",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-link": "^3.15.3",
+    "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
+    "@tiptap/extension-underline": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
+    "@tiptap/vue-3": "^3.15.3",
     "astro": "^5.16.6",
+    "axios": "^1.13.2",
     "drizzle-orm": "^0.45.1",
-    "tailwindcss": "^4.1.18"
+    "lucide-vue-next": "^0.562.0",
+    "pinia": "^3.0.4",
+    "slugify": "^1.6.6",
+    "tailwindcss": "^4.1.18",
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "dotenv": "^17.2.3",
