Ultima Versão, já com SEO e Speed Corrigidos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,23 @@ services:
     networks:
       - inoxlink-network
     healthcheck:
-      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:4321" ]
+      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://127.0.0.1:4321" ]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
+    develop:
+      watch:
+        - action: sync
+          path: ./src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: sync
+          path: ./public
+          target: /app/public
+        - action: rebuild
+          path: package.json
 
   caddy:
     image: caddy:2-alpine
