--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@astrojs/check": "^0.9.6",
     "@astrojs/node": "^9.5.1",
     "@astrojs/react": "^4.4.2",
+    "@astrojs/rss": "^4.0.15",
     "@astrojs/vercel": "^9.0.2",
     "@neondatabase/serverless": "^1.0.2",
     "@tailwindcss/vite": "^4.1.18",
     "@tiptap/extension-code-block-lowlight": "^3.16.0",
     "@tiptap/extension-image": "^3.16.0",
     "@tiptap/extension-link": "^3.16.0",
+    "@tiptap/extension-table": "^3.17.0",
+    "@tiptap/extension-table-cell": "^3.17.0",
+    "@tiptap/extension-table-header": "^3.17.0",
+    "@tiptap/extension-table-row": "^3.17.0",
+    "@tiptap/extension-text-align": "^3.17.0",
+    "@tiptap/extension-underline": "^3.17.0",
     "@tiptap/react": "^3.16.0",
     "@tiptap/starter-kit": "^3.16.0",
     "@types/react": "^19.2.9",
@@ -30,6 +37,7 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
